[gd_scene load_steps=2 format=2]

[ext_resource path="res://objects/2d/editor/CircleEditor.gd" type="Script" id=1]

[node name="CircleEditor" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 1 )

[node name="ScaleControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2

[node name="MoveControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_default_cursor_shape = 13

[connection signal="gui_input" from="ScaleControl" to="." method="_on_gui_input" binds= [ 0 ]]
[connection signal="gui_input" from="MoveControl" to="." method="_on_gui_input" binds= [ 1 ]]
